# mnistops

./: .gitignore  .pre-commit-config.yaml  HW3_report.md  README.md  commands.py  models.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
data/: MNIST.dvc
mnistops/: constants.py  dataset.py  export_model.py  infer.py  model.py  run_server.py  train.py
mnistops/conf/: config.yaml
triton/: docker-compose.yml
triton/model_repository/mnist_classifier/: config.pbtxt
